microservice/higress/tracing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: bff.app-system.svc.cluster.local:80
    higress.io/ignore-path-case: "false"
  labels:
    higress.io/domain_httpbin.example.com: "true"
    higress.io/resource-definer: higress
  name: httpbin
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: httpbin.example.com
      http:
        paths:
          - backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: skywalking-oap-dashboard.op-system.svc.cluster.local:8080
    higress.io/ignore-path-case: "false"
  labels:
    higress.io/domain_skywalking.higress.io: "true"
    higress.io/resource-definer: higress
  name: skywalking-dashboard
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: skywalking.higress.io
      http:
        paths:
          - backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: tracing.op-system.svc.cluster.local:80
    higress.io/ignore-path-case: "false"
  labels:
    higress.io/domain_jaeger.higress.io: "true"
    higress.io/resource-definer: higress
  name: jaeger-dashboard
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: jaeger.higress.io
      http:
        paths:
          - backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
            path: /
            pathType: Prefix
